--- a/HeimdallSource/HeimdallSource.vcxproj
+++ b/HeimdallSource/HeimdallSource.vcxproj
@@ -166,7 +166,7 @@
     <ClCompile Include="imgui_stdlib.cpp" />
     <ClCompile Include="imgui_tables.cpp" />
     <ClCompile Include="imgui_widgets.cpp" />
-    <ClCompile Include="WindowHandler.cpp" />
+    <ClCompile Include="GUIManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AudioHandler.h" />
@@ -179,7 +179,7 @@
     <ClInclude Include="imstb_rectpack.h" />
     <ClInclude Include="imstb_textedit.h" />
     <ClInclude Include="imstb_truetype.h" />
-    <ClInclude Include="WindowHandler.h" />
+    <ClInclude Include="GUIManager.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
